# Proyecto-Dune

./: .gitignore  pyproject.toml
ArrakeenFrost/: building_data.gd  building_manager.gd  enemy_data.gd  icon.svg.import  main.gd  main.gd.uid  npc_controller.gd  npc_manager.gd  npc_manager.gd.uid  project.godot  resource_dashboard.gd  resource_dashboard.gd.uid  resource_dashboard.tscn
Documentacion/: ChatGPT Auditoria de continuidad Casa Portil.docx  ChatGPT Dossier maestro integrado Casa Portil AUDITADO.docx  ChatGPT Dossier maestro integrado Casa Portil CORREGIDO.docx  ChatGPT Fe de erratas Casa Portil.docx  Proyecto Dune - Distribución de la Practica.docx  Proyecto Dune - Dossier Maestro de la Casa de Portil.docx  Proyecto Dune - Dossier de la Casa Portil - Corpus Portilianum Maior.docx  Proyecto Dune - Dossier de la Casa Portil - Trasfondo Ampliado.docx  Proyecto Dune - Dossier de la Casa Portil.docx  Proyecto Dune - Equipo.docx  Proyecto Dune - Esquema Scrum.docx  Proyecto Dune - Justificación del modelo jugable.docx
Documentacion/00_Indice/: INDICE_MAESTRO_DOCUMENTACION.md
Videojuego V2/: FIREBASE_SCHEMA.md  Proyecto Dune - Dossier Maestro de la Casa de Portil (1).docx  Proyecto Dune - Game Design Document (GDD).docx  Proyecto Dune - Lore.docx  Proyecto Dune - Manual de Juego.docx  QUICKSTART.md  README.md  Videojuego V2.sln  extract.py  game.js  index.html
Videojuego V2/.qwen/: settings.json
docs/: README.md
prueba/: d.unity
version_1/: .gitignore  DEVELOPMENT_GUIDE.md  EXECUTIVE_SUMMARY.md  INDEX.md  STRUCTURE_SUMMARY.md  USAGE_EXAMPLES.md
(+114 files in other folders)
