[project]
name = "dune-mcp-multiagent"
version = "0.1.0"
description = "MCP multi-agent orchestration core with mutant agents"
requires-python = ">=3.11"
readme = "src/mcp_multiagent/README.md"
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
dashboard = [
	"fastapi>=0.116.0",
	"uvicorn[standard]>=0.32.0",
	"python-dotenv>=1.0.1",
	"firebase-admin>=6.7.0",
	"supabase>=2.7.4",
	"httpx>=0.27.2",
	"psycopg[binary]>=3.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
